--- a/public/css/pulenta.css
+++ b/public/css/pulenta.css
@@ -165,13 +165,21 @@
     background-color: #f4f4f4;
 }
 
-.container {
+.containerm {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
-
+.card {
+    width: 23%;
+    margin-bottom: 20px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 18px;
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out;
+}
 
 .card:hover {
     transform: scale(1.05);
