--- a/public/css/pulenta.css
+++ b/public/css/pulenta.css
@@ -172,7 +172,7 @@
 }
 
 .card {
-    width: 23%;
+    width: 110px;
     margin-bottom: 20px;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
